differenceChecking/disaster_recovery/virtualServices/vs_coreapiaccount.yaml
##########################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapiaccount
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-account/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapiaccount-crm
  - match:
    - uri:
        prefix: /core-api-account/v2
    route:
    - destination:
        port:
          number: 80
        host: coreapiaccount-teller
  - match:
    - uri:
        prefix: /core-api-account
    route:
    - destination:
        port:
          number: 80
        host: coreapiaccount
