differenceChecking/disaster_recovery/virtualServices/vs_coreapibank.yaml
#################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapibank
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-bank/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapibank-crm
  - match:
    - uri:
        prefix: /core-api-bank/v2
    route:
    - destination:
        port:
          number: 80
        host: coreapibank-teller
  - match:
    - uri:
        prefix: /core-api-bank
    route:
    - destination:
        port:
          number: 80
        host: coreapibank
