differenceChecking/disaster_recovery/virtualServices/vs_coreapibiometric.yaml
##########################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapibiometric
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-biometric/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapibiometric-crm
