differenceChecking/disaster_recovery/virtualServices/vs_coreapicif.yaml

##############################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapicif
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-cif/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapicif-crm
