differenceChecking/disaster_recovery/virtualServices/vs_coreapicoc_esm.yaml
##########################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapicoc
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-coc/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapicoc.esm.svc.cluster.local
  - match:
    - uri:
        prefix: /core-api-coc
    route:
    - destination:
        port:
          number: 80
        host: coreapicoc.esm.svc.cluster.local
