differenceChecking/disaster_recovery/virtualServices/vs_coreapiexternalmessages.yaml
########################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapiexternalmessages
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-externalMessage/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapiexternalmessages-crm
  - match:
    - uri:
        prefix: /core-api-externalMessage/v2
    route:
    - destination:
        port:
          number: 80
        host: coreapiexternalmessages-teller
  - match:
    - uri:
        prefix: /core-api-externalmessages
    route:
    - destination:
        port:
          number: 80
        host: coreapiexternalmessages
