differenceChecking/disaster_recovery/virtualServices/vs_coreapiexternalservice.yaml
#####################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapiexternalservice
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-externalservice/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapiexternalservice-crm
  - match:
    - uri:
        prefix: /core-api-externalservice/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapiexternalservice
