differenceChecking/disaster_recovery/virtualServices/vs_coreapifile.yaml


#####################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapifile
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-file/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapifile-crm
  - match:
    - uri:
        prefix: /core-api-file/v2
    route:
    - destination:
        port:
          number: 80
        host: coreapifile-teller
  - match:
    - uri:
        prefix: /core-api-file
    route:
    - destination:
        port:
          number: 80
        host: coreapifile
