differenceChecking/disaster_recovery/virtualServices/vs_coreapimatrix.yaml

##############################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapimatrix
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-matrix/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapimatrix-crm
  - match:
    - uri:
        prefix: /core-api-matrix/v2
    route:
    - destination:
        port:
          number: 80
        host: coreapimatrix-teller
  - match:
    - uri:
        prefix: /core-api-matrix
    route:
    - destination:
        port:
          number: 80
        host: coreapimatrix
