differenceChecking/disaster_recovery/virtualServices/vs_coreapireport.yaml
#########################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapireport
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-report/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapireport-crm.reporting.svc.cluster.local
  - match:
    - uri:
        prefix: /core-api-report/v2
    route:
    - destination:
        port:
          number: 80
        host: coreapireport-teller.reporting.svc.cluster.local

  - match:
    - uri:
        prefix: /core-api-report
    route:
    - destination:
        port:
          number: 80
        host: coreapireport.reporting.svc.cluster.local
