differenceChecking/disaster_recovery/virtualServices/vs_coreapiuser.yaml
#################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapiuser
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-user/v3
    route:
    - destination:
        port:
          number: 8080
        host: aaa-user-api-service-crm.aaa.svc.cluster.local
  - match:
    - uri:
        prefix: /core-api-user/v2
    route:
    - destination:
        port:
          number: 8080
        host: aaa-user-api-service-teller.aaa.svc.cluster.local
  - match:
    - uri:
        prefix: /core-api-user
    route:
    - destination:
        port:
          number: 8080
        host: aaa-user-api-service.aaa.svc.cluster.local
